  Changes:
    - Debug - Switched to a more performant getinfo call
    - Stringify - Simplified no-op to_string calls when trying to stingify a string (less checks before returning it)
    - Tester - Almost full rewrite of the tester underlying code
    - Tester - Logs individual test group's successes during end report
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2021.07.27
  Features:
    - Custom_Events - Added module for producing/consuming custom events
    - Debug - Added module for common usage of Lua's debug module
    - Help - Added module for parsing `help()` text
    - Math - Added module for some easy math functions
    - Player - Added module for some easy player validation functions
    - Stringify - Added module, to parse anything to a pretty printing string (including lua_objects)
    - Table - Added module for some common table manipulation
    - Template/Storage - Added boilerplate for Storage modules
    - Util - Added module to add some missing gaps in the lulib from Factorio core (with some aliases to not have to bounce back and forth)
  Breaking Changes:
    - Tester - Moved from `modules/tester.lua` to `modules/testing/tester.lua`
    - Tester - Reworked Tester.run() output to return a full mapping of test results (doesn't break adding/running tests, only the results)
    - Tester/Assert - Moved Tester asserts to `Tester.Assert` or `modules/testing/assert.lua`
    - Tester/Mock - Moved Tester mocks to `Tester.Mock` or `modules/testing/mock.lua`
    - Logger - Logger rewrite requires all log methods to use ":" for access (i.e. Logger:info(...))
  Changes:
    - Tester - Added optional `args`, `generateArgsFunc`, and `generateArgsFuncArgs` parameters when adding test(s) to supply to the test function
    - Tester - Added optional `before` and `beforeArgs` to tests and testers, which will skip tests if they fail