@@ -8,6 +8,7 @@ Date: 2021.08.00
     - Stringify - Simplified no-op to_string calls when trying to stingify a string (less checks before returning it)
     - Tester - Almost full rewrite of the tester underlying code
     - Tester - Logs individual test group's successes during end report
+    - Testing/Assert - Added throws error asserts
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2021.07.27
